RESOLVED FIXED310932
[ModelElement] stagemode=orbit does not allow user interaction with the model after navigating away via the back button and returning using forward navigation
https://bugs.webkit.org/show_bug.cgi?id=310932
Summary [ModelElement] stagemode=orbit does not allow user interaction with the model...
Aleksei Marchenko
Reported 2026-03-27 14:51:32 PDT
Steps to repro: 0. Make sure you have history for 'back' button to be enabled 1. Load https://developer.apple.com/augmented-reality/quick-look/, scroll down to 'Examples with inline models' 2. Interact with the model (visionOS: pinch and move) 3. Press 'Back' button, wait a couple seconds 4. Press 'Forward' button to go back to developer.apple.com 5. Interact with the model Exp: model must react to interactions Act: no interaction
Attachments
Aleksei Marchenko
Comment 1 2026-03-27 15:11:58 PDT
Aleksei Marchenko
Comment 2 2026-03-27 15:12:52 PDT
EWS
Comment 3 2026-04-06 13:51:08 PDT
Committed 310667@main (75bbb1a345f3): <https://commits.webkit.org/310667@main> Reviewed commits have been landed. Closing PR #61531 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.